<resources>
    <string name="app_name">Ultimate Chess</string>
    <string name="engine_threads_default">1</string>
    <string name="moves_per_session_default">60</string>
    <string name="time_control_default">120000</string>
    <string name="time_increment_default">0</string>
    <string name="font_size_default">12</string>
    <string name="thinking_arrows_default">2</string>
    <string name="scroll_sensitivity_default">2</string>
    <string name="book_line_length_default">1000000</string>
    <string name="cpu_warning">\
<b>CPU Usage</b>\n\
If you leave Chess running in the background and <i>GameMode</i> is set to \
<i>Analysis</i> or <i>Computer vs Computer</i>, or if <i>Thinking Time</i> \
is set to a large value, or if <i>Pondering</i> is enabled, Chess can use \
a lot of CPU power.\n\
\n\
If you are running on battery power, it is recommended that you change settings to \
conserve battery power, or that you exit <i>Chess</i> using the back button when \
you are not actively using the program.\
    </string>
    <string name="offer_draw">Offer Draw</string>
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="bishop">Bishop</string>
    <string name="knight">Knight</string>
    <string name="promote_pawn_to">Promote pawn to?</string>
    <string name="copy_game">Copy Game to Clipboard</string>
    <string name="copy_position">Copy Position to Clipboard</string>
    <string name="paste">Paste from Clipboard</string>
    <string name="load_game">Load game from PGN file</string>
    <string name="load_scid_game">Load game from Scid file</string>
    <string name="save_game">Save game to PGN file</string>
    <string name="truncate_gametree">Truncate Game Tree</string>
    <string name="move_var_up">Move Variation Up</string>
    <string name="move_var_down">Move Variation Down</string>
    <string name="add_null_move">Add Null Move</string>
    <string name="tools_menu">Tools</string>
    <string name="load_save_menu">Load/Save Game</string>
    <string name="goto_move">Goto move</string>
    <string name="edit_strength">Edit Strength</string>
    <string name="edit_randomization">Edit Randomization</string>
    <string name="invalid_number_format">Invalid number format</string>
    <string name="side_to_move">Side to Move</string>
    <string name="clear_board">Clear Board</string>
    <string name="initial_position">Initial Position</string>
    <string name="castling_flags">Castling Flags</string>
    <string name="en_passant_file">En Passant File</string>
    <string name="move_counters">Move Counters</string>
    <string name="paste_position">Paste Position</string>
    <string name="edit_board">Edit Board</string>
    <string name="select_side_to_move_first">Select side to move first</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="white_king_castle">White king castle</string>
    <string name="white_queen_castle">White queen castle</string>
    <string name="black_king_castle">Black king castle</string>
    <string name="black_queen_castle">Black queen castle</string>
    <string name="none">None</string>
    <string name="select_en_passant_file">Select En Passant File</string>
    <string name="edit_move_counters">Edit Move Counters</string>
    <string name="internal_book">&lt;Internal Book&gt;</string>
    <string name="select_opening_book_file">Select opening book file</string>
    <string name="select_chess_engine">Select Chess Engine</string>
    <string name="select_pgn_file">Open PGN file</string>
    <string name="select_pgn_file_save">Save to PGN file</string>
    <string name="pgn_load">Load</string>
    <string name="pgn_save">Save</string>
    <string name="select_scid_file">Select Scid file to open</string>
    <string name="select_pgn_game">Select game to open</string>
    <string name="reading_pgn_file">Reading PGN file</string>
    <string name="reading_scid_file">Reading Scid file</string>
    <string name="new_file">&lt;New File&gt;</string>
    <string name="please_wait">Please wait…</string>
    <string name="no_pgn_files">No files found in directory Chess/pgn on the SD card</string>
    <string name="no_scid_files">No files found in directory scid on the SD card</string>
    <string name="select_color_theme">Select Color Theme</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="edit_replay_game">Edit/re-play Game</string>
    <string name="analysis_mode">Analysis Mode</string>
    <string name="play_white">Play White</string>
    <string name="play_black">Play Black</string>
    <string name="two_players">Two Players</string>
    <string name="comp_vs_comp">Computer vs Computer</string>
    <string name="analysis">Analysis</string>
    <string name="edit_game">Edit Game</string>
    <string name="edit_headers">Edit Headers</string>
    <string name="edit_comments">Edit Comments</string>
    <string name="go_back">Go Back</string>
    <string name="go_forward">Go Forward</string>
    <string name="goto_start_game">Goto Start of Game</string>
    <string name="goto_start_variation">Goto Start of Variation</string>
    <string name="goto_prev_variation">Goto Previous Variation</string>
    <string name="load_prev_game">Load Previous Game</string>
    <string name="goto_end_variation">Goto End of Variation</string>
    <string name="goto_next_variation">Goto Next Variation</string>
    <string name="load_next_game">Load Next Game</string>
    <string name="no_prev_game">No previous game</string>
    <string name="no_next_game">No next game</string>
    <string name="select_action">Select Action</string>
    <string name="flip_board">Flip Board</string>
    <string name="toggle_show_thinking">Toggle Show Thinking</string>
    <string name="toggle_book_hints">Toggle Book Hints</string>
    <string name="toggle_pgn_variations">Toggle Variations</string>
    <string name="toggle_pgn_comments">Toggle Comments</string>
    <string name="toggle_pgn_headers">Toggle Headers</string>
    <string name="toggle_analysis">Toggle Engine Analysis</string>
    <string name="toggle_large_buttons">Toggle Large Buttons</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="move_number">Move number:</string>
    <string name="filename">Filename:</string>
    <string name="halfmove">Halfmove clock:</string>
    <string name="fullmove">Fullmove counter:</string>
    <string name="filter_text">Search…</string>
    <string name="value_percent">Value (%):</string>
    <string name="header_event">Event:</string>
    <string name="header_site">Site:</string>
    <string name="header_date">Date:</string>
    <string name="header_round">Round:</string>
    <string name="header_white">White:</string>
    <string name="header_black">Black:</string>
    <string name="comment_before">Before:</string>
    <string name="comment_move">Move:</string>
    <string name="comment_after">After:</string>
    <string name="whites_move">White\'s move</string>
    <string name="blacks_move">Black\'s move</string>
    <string name="ponder">ponder</string>
    <string name="thinking">thinking</string>
    <string name="analyzing">analyzing</string>
    <string name="white_mate">Game over, white mates!</string>
    <string name="black_mate">Game over, black mates!</string>
    <string name="stalemate">Game over, draw by stalemate!</string>
    <string name="draw_rep">Game over, draw by repetition!</string>
    <string name="draw_50">Game over, draw by 50 move rule!</string>
    <string name="draw_no_mate">Game over, draw by impossibility of mate!</string>
    <string name="draw_agree">Game over, draw by agreement!</string>
    <string name="resign_white">Game over, white resigns!</string>
    <string name="resign_black">Game over, black resigns!</string>
    <string name="book">Book:</string>
    <string name="invalid_move">Invalid move</string>
    <string name="preferences">Preferences</string>
    <string name="load_game_title">Edit File / Load Game</string>
    <string name="save_game_title">Edit File / Save Game</string>
    <string name="save_game_hint">Select an existing game to control where to save the game. Long press an existing game to delete it.</string>
    <string name="load_scid_game_title">Load Scid Game</string>
    <string name="cpu_warning_title">CPU Warning</string>
    <string name="failed_to_read_pgn_data">Failed to read pgn data</string>
    <string name="variation">Var:</string>
    <string name="add_analysis">Add Analysis</string>
    <string name="fewer_variations">Fewer Variations</string>
    <string name="more_variations">More Variations</string>
    <string name="hide_statistics">Hide statistics</string>
    <string name="show_statistics">Show statistics</string>
    <string name="heavy_cpu_usage">Heavy CPU usage</string>
    <string name="background_processing">Background processing</string>
    <string name="lot_cpu_power">Chess is using a lot of CPU power</string>
    <string name="delete_game">Delete game?</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_file_question">Delete file?</string>
    <string name="delete_named_file">Delete file %s?</string>
    <string name="game_saved">Game saved</string>
    <string name="failed_to_save_game">Failed to save game</string>
    <string name="failed_to_delete_game">Failed to delete game</string>
    <string name="file_too_large">File too large</string>
    <string name="not_a_pgn_file">Not a PGN file</string>
    <string name="save_game_question">Save game?</string>
    <string name="before_selected">Before Selected</string>
    <string name="after_selected">After Selected</string>
    <string name="replace_selected">Replace Selected</string>
    <string name="engine">Engine</string>
    <string name="engine_error">Engine error</string>
    <string name="stockfish_engine">Hard Engine</string>
    <string name="cuckoochess_engine">Easy Engine</string>
    <string name="failed_to_start_engine">Failed to start engine</string>
    <string name="engine_terminated">Engine terminated</string>
    <string name="uci_protocol_error">UCI protocol error</string>
    <string name="start_new_game">Start New Game?</string>
    <string name="strength_cuckoo_hint">Use the EasyChess engine for even lower strength.</string>
    <string name="err_too_few_spaces">Too few spaces</string>
    <string name="err_invalid_piece">Invalid piece</string>
    <string name="err_invalid_side">Invalid side</string>
    <string name="err_invalid_castling_flags">Invalid castling flags</string>
    <string name="err_invalid_en_passant_square">Invalid en passant square</string>
    <string name="err_white_num_kings">White must have exactly one king</string>
    <string name="err_black_num_kings">Black must have exactly one king</string>
    <string name="err_king_capture_possible">King capture possible</string>
    <string name="err_too_many_rows">Too many rows</string>
    <string name="err_too_many_columns">Too many columns</string>
    <string name="err_pawn_on_first_last_rank">Pawn on first/last rank</string>
    <string name="err_too_many_white_pieces">Too many white pieces</string>
    <string name="err_too_many_black_pieces">Too many black pieces</string>
    <string name="option_new_game">New Game</string>
    <string name="option_file">File</string>
    <string name="option_resign_game">Resign game</string>
    <string name="option_edit_board">Edit Board</string>
    <string name="buttonDesc_custom1">@string/prefs_custom_button_1</string>
    <string name="buttonDesc_custom2">@string/prefs_custom_button_2</string>
    <string name="buttonDesc_custom3">@string/prefs_custom_button_3</string>
    <string name="buttonDesc_mode">Mode button</string>
    <string name="buttonDesc_back">Backward button</string>
    <string name="buttonDesc_forward">Forward button</string>
</resources>